# satellite-imagery-analysis

SatImageAnalyzer/: app.py  config.py  ignore.gitignore  models.py  pyproject.toml  replit.nix  requirements.txt
SatImageAnalyzer/instance/: satellite_imagery.db
SatImageAnalyzer/routes/: __init__.py  analysis_routes.py  main_routes.py
SatImageAnalyzer/sample_data/: __init__.py  metadata.py
SatImageAnalyzer/satellite/: __init__.py  feature_extractor.py  image_loader.py  image_processor.py  report_generator.py  utils.py  visualization.py
SatImageAnalyzer/static/css/: custom.css
SatImageAnalyzer/static/js/: main.js
SatImageAnalyzer/templates/: 404.html  500.html  analysis.html  documentation.html  error.html  index.html  layout.html  report.html  results.html  upload.html
SatImageAnalyzer/utils/: __init__.py  feature_extraction.py  file_handler.py  image_processing.py  report_generation.py  visualization.py
